Cleaning up compiler warnings.